#!/usr/bin/env -S deno run --allow-all

import * as SQLa from "../../render/mod.ts";
import * as typ from "../typical/mod.ts";
import * as govn from "./governance.ts";
import { zod as z } from "../../deps.ts";

// deno-lint-ignore no-explicit-any
type Any = any;

export type EmitContext = SQLa.SqlEmitContext;

export type StateCheckValues =
  | "ACTIVE"
  | "INACTIVE"
  | "PENDING"
  | "ARCHIVED"
  | "DELETED"
  | "PROCESSING"
  | "FAILED"
  | "COMPLETED"
  | "INPROGRESS";

export const tcf = SQLa.tableColumnFactory<Any, Any, typ.TypicalDomainQS>();
export const gts = typ.governedTemplateState<
  typ.TypicalDomainQS,
  typ.TypicalDomainsQS,
  EmitContext
>();
export const gm = typ.governedModel<
  typ.TypicalDomainQS,
  typ.TypicalDomainsQS,
  EmitContext
>(
  gts.ddlOptions,
);
export const {
  text,
  textNullable,
  integer,
  integerNullable,
  date,
  dateNullable,
  dateTime,
  selfRef,
  dateTimeNullable,
  float,
  floatNullable,
  bigFloat,
  bigFloatNullable,
  uuid,
  uuidNullable,
  ulid,
  ulidNullable,
  jsonText,
  jsonTextNullable,
  boolean,
  booleanNullable,
  varChar,
  varCharNullable,
  jsonB,
  jsonbNullable,
} = gm.domains;
export const {
  autoIncPrimaryKey: autoIncPK,
  ulidPrimaryKey: ulidPrimaryKey,
  uuidPrimaryKey: uuidPrimaryKey,
} = gm.keys;

export const execCtx = gm.textEnumTable(
  "execution_context",
  govn.ExecutionContext,
  { isIdempotent: true },
);

export const verificationType = gm.textEnumTable(
  "verification_type",
  govn.VerificationType,
  { isIdempotent: true },
);

export const partyRole = gm.textPkTable(
  "party_role",
  {
    party_role_id: ulidPrimaryKey(),
    code: tcf.unique(text()),
    value: text(),
    ...gm.housekeeping.columns,
  },
  {
    qualitySystem: {
      description:
        "Entity to store different types of party roles. Each role is identified by a unique code and has an associated value/description.",
    },
  },
);

export const partyIdentifierType = gm.textPkTable(
  "party_identifier_type",
  {
    party_identifier_type_id: ulidPrimaryKey(),
    code: tcf.unique(text()),
    value: text(),
    ...gm.housekeeping.columns,
  },
  {
    qualitySystem: {
      description: "Entity to store different types of party identifiers.",
    },
  },
);

export const contactType = gm.textPkTable(
  "contact_type",
  {
    contact_type_id: ulidPrimaryKey(),
    code: tcf.unique(text()),
    value: text(),
    ...gm.housekeeping.columns,
  },
  {
    qualitySystem: {
      description:
        "Entity Table to store different types of contact information.",
    },
  },
);

export const organizationRoleType = gm.textPkTable(
  "organization_role_type",
  {
    organization_role_type_id: ulidPrimaryKey(),
    code: tcf.unique(text()),
    value: text(),
    ...gm.housekeeping.columns,
  },
  {
    qualitySystem: {
      description:
        "Entity to store different types of organization roles. Each role is identified by a unique code and has an associated value/description.",
    },
  },
);

export const partyRoleType = gm.textPkTable(
  "party_role_type",
  {
    party_role_type_id: ulidPrimaryKey(),
    code: tcf.unique(text()),
    value: text(),
    ...gm.housekeeping.columns,
  },
);

export const personType = gm.textPkTable(
  "person_type",
  {
    person_type_id: ulidPrimaryKey(),
    code: tcf.unique(text()),
    value: text(),
    ...gm.housekeeping.columns,
  },
);

export const partyType = gm.textPkTable(
  "party_type",
  {
    party_type_id: ulidPrimaryKey(),
    code: tcf.unique(text()),
    value: text(),
    ...gm.housekeeping.columns,
  },
);

export const partyRelationType = gm.textPkTable(
  "party_relation_type",
  {
    party_relation_type_id: ulidPrimaryKey(),
    code: tcf.unique(text()),
    value: text(),
    ...gm.housekeeping.columns,
  },
);

export const genderType = gm.textPkTable(
  "gender_type",
  {
    gender_type_id: ulidPrimaryKey(),
    code: tcf.unique(text()),
    value: text(),
    ...gm.housekeeping.columns,
  },
);

export const sexType = gm.textPkTable(
  "sex_type",
  {
    sex_type_id: ulidPrimaryKey(),
    code: tcf.unique(text()),
    value: text(),
    ...gm.housekeeping.columns,
  },
);

// Typescript inference would work here but we're explicit about the array
// type to improve performance
export const allReferenceTables: (
  & SQLa.TableDefinition<Any, EmitContext, typ.TypicalDomainQS>
  & typ.EnumTableDefn<EmitContext>
)[] = [
  execCtx,
  verificationType,
];

export const party = gm.textPkTable("party", {
  party_id: ulidPrimaryKey(),
  party_type_id: partyType.references.party_type_id(),
  party_name: text(),
  elaboration: jsonTextNullable(),
  ...gm.housekeeping.columns,
}, {
  qualitySystem: {
    description:
      "Entity representing parties involved in business transactions.",
  },
});

/**
 * Reference URL: https://help.salesforce.com/s/articleView?id=sf.c360_a_partyidentification_object.htm&type=5
 */

export const partyIdentifier = gm.textPkTable("party_identifier", {
  party_identifier_id: ulidPrimaryKey(),
  identifier_name: text(),
  identifier_value: text(),
  party_identifier_type_id: partyIdentifierType.references
    .party_identifier_type_id(),
  party_id: party.references.party_id(),
  elaboration: jsonTextNullable(),
  ...gm.housekeeping.columns,
}, {
  qualitySystem: {
    description:
      "Entity to associate identifiers with parties. Each party identifier has a unique ID and is associated with a specific party and identifier type.",
  },
});

/**
 * Reference URL: https://schema.org/honorificPrefix
 * Reference URL: https://schema.org/honorificSuffix
 */
export const previousNameElaboration = z.object({
  previous_name: textNullable(),
});

export const person = gm.textPkTable("person", {
  person_id: ulidPrimaryKey(),
  party_id: party.references.party_id(),
  person_type_id: personType.references.person_type_id(),
  person_first_name: text(),
  person_middle_name: textNullable(),
  person_last_name: text(),
  previous_name: textNullable(),
  honorific_prefix: textNullable(),
  honorific_suffix: textNullable(),
  gender_id: genderType.references.gender_type_id(),
  sex_id: sexType.references.sex_type_id(),
  elaboration: jsonTextNullable(),
  ...gm.housekeeping.columns,
}, {
  qualitySystem: {
    description:
      "Entity to store information about individuals as persons. Each person has a unique ID associated with them.",
  },
});

/**
 * Reference URL: https://docs.oracle.com/cd/E29633_01/CDMRF/GUID-F52E49F4-AE6F-4FF5-8EEB-8366A66AF7E9.htm
 */

export const partyRelation = gm.textPkTable("party_relation", {
  party_relation_id: ulidPrimaryKey(),
  party_id: party.references.party_id(),
  related_party_id: party.references.party_id(),
  relation_type_id: partyRelationType.references.party_relation_type_id(),
  party_role_id: partyRole.references.party_role_id().optional(),
  elaboration: jsonTextNullable(),
  ...gm.housekeeping.columns,
}, {
  qualitySystem: {
    description:
      "Entity to define relationships between parties. Each party relation has a unique ID associated with it.",
  },
});

export const organization = gm.textPkTable("organization", {
  organization_id: ulidPrimaryKey(),
  party_id: party.references.party_id(),
  name: text(),
  alias: textNullable(),
  description: textNullable(),
  license: text(),
  federal_tax_id_num: textNullable(),
  registration_date: date(),
  elaboration: jsonTextNullable(),
  ...gm.housekeeping.columns,
}, {
  qualitySystem: {
    description:
      "Entity to store information about organizations. Each organization has a unique ID associated with it.",
  },
});

export const organizationRole = gm.textPkTable("organization_role", {
  organization_role_id: ulidPrimaryKey(),
  person_id: person.references.person_id(),
  organization_id: organization.references.organization_id(),
  organization_role_type_id: organizationRoleType.references
    .organization_role_type_id(),
  elaboration: jsonTextNullable(),
  ...gm.housekeeping.columns,
}, {
  qualitySystem: {
    description:
      "Entity to associate individuals with roles in organizations. Each organization role has a unique ID associated with it.",
  },
});
// contact_*_assurance -
export const contactElectronic = gm.textPkTable("contact_electronic", {
  contact_electronic_id: ulidPrimaryKey(),
  contact_type_id: contactType.references.contact_type_id(),
  party_id: party.references.party_id(),
  electronics_details: text(),
  elaboration: jsonTextNullable(),
  ...gm.housekeeping.columns,
}, {
  qualitySystem: {
    description:
      "Entity to store electronic contact information associated with parties. Each electronic contact has a unique ID associated with it.",
  },
});

export const contactElectronicAssurance = gm.stateTable(
  "contact_electronic_assurance",
  {
    contact_electronic_assurance_id: ulidPrimaryKey(),
    contact_electronic_id: contactElectronic.references.contact_electronic_id(),
  },
);

export const contactLand = gm.textPkTable("contact_land", {
  contact_land_id: ulidPrimaryKey(),
  contact_type_id: contactType.references.contact_type_id(),
  party_id: party.references.party_id(),
  address_line1: text(),
  address_line2: text(),
  address_zip: text(),
  address_city: text(),
  address_state: text(), // same as province so both simultaneously is not required
  address_territory: textNullable(),
  address_country: text(),
  elaboration: jsonTextNullable(),
  ...gm.housekeeping.columns,
}, {
  qualitySystem: {
    description:
      "Entity to store land-based contact information associated with parties. Each land contact has a unique ID associated with it.",
  },
});

export const partyState = gm.stateTable("party_state", {
  party_state_id: ulidPrimaryKey(),
  party_id: party.references.party_id(),
});

export function StateValueCheck(
  table: string,
  fromStateValues: StateCheckValues[],
  toStateValues: StateCheckValues[],
): SQLa.SqlTextSupplier<SQLa.SqlEmitContext> {
  const fromStateCheckCondition = fromStateValues.map((value) =>
    `${gm.stateTableCommonCol.from_state} = '${value}'`
  ).join(" OR ");
  const toStateCheckCondition = toStateValues.map((value) =>
    `${gm.stateTableCommonCol.to_state} = '${value}'`
  ).join(" OR ");

  return {
    SQL: () =>
      `ALTER TABLE ${table} ADD CONSTRAINT from_state_check CHECK (${fromStateCheckCondition});
       ALTER TABLE ${table} ADD CONSTRAINT to_state_check CHECK (${toStateCheckCondition});
      `,
  };
}

/**
 * Reference URL: https://docs.microfocus.com/UCMDB/11.0/cp-docs/docs/eng/class_model/html/index.html
 */

/**
 * Reference URL: https://docs.microfocus.com/UCMDB/11.0/cp-docs/docs/eng/class_model/html/index.html
 */

/**
 * Reference URL: https://docs.microfocus.com/UCMDB/11.0/cp-docs/docs/eng/class_model/html/index.html
 */

/**
 * Reference URL: https://docs.microfocus.com/UCMDB/11.0/cp-docs/docs/eng/class_model/html/index.html
 */

// Typescript inference would work here but we're explicit about the array
// type to improve performance
export const allContentTables: SQLa.TableDefinition<
  Any,
  EmitContext,
  typ.TypicalDomainQS
>[] = [
  partyType,
  partyRelationType,
  organizationRoleType,
  partyRole,
  partyIdentifierType,
  contactType,
  party,
  partyState,
  partyIdentifier,
  person,
  partyRelation,
  organization,
  organizationRole,
  contactElectronic,
  contactElectronicAssurance,
  contactLand,
  personType,
  partyRoleType,
  genderType,
  sexType,
];

export const vendorView = SQLa.safeViewDefinition(
  "vendor_view",
  {
    name: text(),
    email: text(),
    address: text(),
    state: text(),
    city: text(),
    zip: text(),
    country: text(),
  },
)`
  SELECT pr.party_name as name,
  e.electronics_details as email,
  l.address_line1 as address,
  l.address_state as state,
  l.address_city as city,
  l.address_zip as zip,
  l.address_country as country
  FROM party_relation prl
  INNER JOIN party pr ON pr.party_id = prl.party_id
  INNER JOIN contact_electronic e ON e.party_id = pr.party_id AND e.contact_type_id = (SELECT contact_type_id FROM contact_type WHERE code='OFFICIAL_EMAIL')
  INNER JOIN contact_land l ON l.party_id = pr.party_id AND l.contact_type_id = (SELECT contact_type_id FROM contact_type WHERE code='OFFICIAL_ADDRESS')
  WHERE prl.party_role_id = 'VENDOR' AND prl.relation_type_id = 'ORGANIZATION_TO_PERSON'`;

export const allContentViews: SQLa.ViewDefinition<
  Any,
  EmitContext,
  SQLa.SqlDomainQS
>[] = [
  vendorView,
];

export function sqlDDL() {
  // NOTE: every time the template is "executed" it will fill out tables, views
  //       in gm.tablesDeclared, etc.
  // deno-fmt-ignore
  return SQLa.SQL<EmitContext>(gts.ddlOptions)`
    PRAGMA foreign_keys = on; -- check foreign key reference, slightly worst performance

    -- reference tables
    ${allReferenceTables}

    -- content tables
    ${allContentTables}


    --content views
    ${allContentViews}

    -- seed Data
    ${allReferenceTables.map(e => e.seedDML).flat()}
    `;
}
